# open_agent_studio

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: deploy-production.yml
alembic/: env.py
alembic/versions/: 0002_agent_run_state_machine.py  0003_model_config_api_key.py  cde15cf6bb6e_baseline_schema.py
backend/app/: main.py
backend/app/agents/: context.py  contracts.py  ecommerce_agent.py  factory.py  general_agent.py  image_agent.py  judge_agent.py  modes.py  routing.py  tech_agent.py  triage_agent.py
backend/app/api/: dependencies.py
backend/app/core/: agent_run_status.py  config.py  exceptions.py  logging.py
backend/app/db/: base.py  init_db.py  seed.py  session.py
backend/app/models/: __init__.py  agent_run.py  auth_session.py  conversation.py  login_challenge.py  message.py  model_compare.py  model_config.py  run_event.py  system_exception.py  token_usage.py  tool_call.py  user.py
backend/scripts/: day03_db_check.py  debug_model_configs.py  probe_model_config.py  test_model_factory.py
backend/test/: test1.py
backend/tests/: admin_smoke.py  api_smoke.py  auth_smoke.py  live_agent_smoke.py  live_compare_smoke.py  live_memory_smoke.py  session_adapter_smoke.py  test_agent_run_lifecycle.py  test_day24_day30.py
docs/: OpenAgent_Studio_30天开发计划.docx  architecture.md  demo-script.md  dev-log.md
frontend/: .env.example  .npmrc  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: AdminApp.tsx  App.css  App.tsx  main.tsx  types.ts
scripts/: generate_diagrams.py
(+58 files in other folders)
