[project]
name = "open-agent-studio"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "aiosqlite>=0.22.1",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "openai-agents>=0.17.7",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "tzdata>=2026.3",
    "uvicorn[standard]>=0.49.0",
]
